Add Calculators section with NRI Status Calculator
- Added Calculators section to home page with styled card
- Created NRI Status Calculator with Yes/No selection questions
- Calculator determines NRI/ROR/RNOR status based on Section 6 rules
- Added terminology help toggle explaining NRI, ROR, RNOR terms
- Updated hero section to full viewport height (100vh)
- Added site footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,38 @@
                 <div class="hero-overlay"></div>
             </div>
         </section>
+
+        <!-- Calculators Section -->
+        <section class="calculators-section">
+            <div class="section-container">
+                <h2 class="section-title">Calculators</h2>
+                <p class="section-subtitle">Smart financial tools for NRIs</p>
+
+                <div class="calculators-grid">
+                    <a href="calculators/nri-status/index.html" class="calculator-card">
+                        <div class="calculator-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="1.5">
+                                <path
+                                    d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                            </svg>
+                        </div>
+                        <h3 class="calculator-title">NRI Status Calculator</h3>
+                        <p class="calculator-description">Find out if you're NRI, ROR, or RNOR for tax purposes based on
+                            your days in India</p>
+                        <span class="calculator-cta">Check Status →</span>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p>© 2025 Aswin on Finance. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="home.js"></script>
 </body>
