Add 5 financial calculators
- SIP Calculator: Monthly investment growth calculator
- Stepup SIP Calculator: SIP with annual increase
- CAGR Calculator: Compound annual growth rate
- Home Loan EMI Calculator: Monthly EMI for home loans
- Car Loan EMI Calculator: Monthly EMI for car loans

All calculators feature:
- Interactive sliders and inputs
- Real-time calculation updates
- Visual charts showing breakdown
- Responsive design
- Shared CSS for consistent styling

--- a/index.html
+++ b/index.html
@@ -56,9 +56,71 @@
                             </svg>
                         </div>
                         <h3 class="calculator-title">NRI Status Calculator</h3>
-                        <p class="calculator-description">Find out if you're NRI, ROR, or RNOR for tax purposes based on
-                            your days in India</p>
+                        <p class="calculator-description">Find out if you're NRI, ROR, or RNOR for tax purposes</p>
                         <span class="calculator-cta">Check Status →</span>
+                    </a>
+
+                    <a href="calculators/sip/index.html" class="calculator-card">
+                        <div class="calculator-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="1.5">
+                                <path d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
+                            </svg>
+                        </div>
+                        <h3 class="calculator-title">SIP Calculator</h3>
+                        <p class="calculator-description">Calculate returns on your monthly investments</p>
+                        <span class="calculator-cta">Calculate →</span>
+                    </a>
+
+                    <a href="calculators/stepup-sip/index.html" class="calculator-card">
+                        <div class="calculator-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="1.5">
+                                <path d="M3 3v18h18M7 16l4-4 4 4 5-5" />
+                            </svg>
+                        </div>
+                        <h3 class="calculator-title">Stepup SIP Calculator</h3>
+                        <p class="calculator-description">SIP with annual increase in investment amount</p>
+                        <span class="calculator-cta">Calculate →</span>
+                    </a>
+
+                    <a href="calculators/cagr/index.html" class="calculator-card">
+                        <div class="calculator-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="1.5">
+                                <path
+                                    d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                            </svg>
+                        </div>
+                        <h3 class="calculator-title">CAGR Calculator</h3>
+                        <p class="calculator-description">Calculate compound annual growth rate of investments</p>
+                        <span class="calculator-cta">Calculate →</span>
+                    </a>
+
+                    <a href="calculators/home-loan-emi/index.html" class="calculator-card">
+                        <div class="calculator-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="1.5">
+                                <path
+                                    d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                            </svg>
+                        </div>
+                        <h3 class="calculator-title">Home Loan EMI</h3>
+                        <p class="calculator-description">Calculate your monthly home loan EMI</p>
+                        <span class="calculator-cta">Calculate →</span>
+                    </a>
+
+                    <a href="calculators/car-loan-emi/index.html" class="calculator-card">
+                        <div class="calculator-icon">
+                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="1.5">
+                                <path
+                                    d="M8 17h.01M16 17h.01M3 11l1.5-5A2 2 0 016.4 4.5h11.2a2 2 0 011.9 1.5L21 11M3 11v6a1 1 0 001 1h1m16-7v6a1 1 0 01-1 1h-1M3 11h18M7 17a1 1 0 100 2 1 1 0 000-2zm10 0a1 1 0 100 2 1 1 0 000-2z" />
+                            </svg>
+                        </div>
+                        <h3 class="calculator-title">Car Loan EMI</h3>
+                        <p class="calculator-description">Calculate your monthly car loan EMI</p>
+                        <span class="calculator-cta">Calculate →</span>
                     </a>
                 </div>
             </div>
