fix: update copy for NRI status check

--- a/mutualfunds/index.html
+++ b/mutualfunds/index.html
@@ -260,8 +260,9 @@
         <section class="plg-teaser" id="checklist">
             <div class="teaser-content">
                 <span class="teaser-badge">Quick Check</span>
-                <h3>Can NRIs invest in mutual funds tax-efficiently?</h3>
-                <p>Answer 2–3 simple questions to find out what applies to you.</p>
+                <h3>Am I an NRI for tax purposes?</h3>
+                <p>Your residential status (NRI, Resident, or RNOR) determines your tax rules. Find out in 2 minutes.
+                </p>
                 <a href="../calculators/nri-status/index.html" class="cta-button">Check Your Status</a>
             </div>
         </section>
