feat: Redesign Hero section and update profile image

--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
     <main class="home-container">
         <!-- Hero Section -->
         <section class="hero-section">
-            <div class="hero-content">
-                <h1 class="hero-title">Aswin on Finance</h1>
-                <div class="hero-cta-wrapper">
-                    <a href="blog/index.html" class="cta-button">Read Articles</a>
+            <div class="hero-container">
+                <div class="hero-text">
+                    <h1 class="hero-title">Aswin on Finance</h1>
+                    <p class="hero-subtitle">Financial insights and guidance for NRIs — taxes, investments, and banking
+                        made simple.</p>
+                    <div class="hero-cta-wrapper">
+                        <a href="blog/index.html" class="cta-button">Read Articles</a>
+                    </div>
                 </div>
-            </div>
-
-            <!-- Background Illustration -->
-            <div class="hero-background">
-                <div class="hero-image-wrapper">
-                    <img src="blog/images/hero-bg.webp" alt="Kerala landscape" class="hero-image" fetchpriority="high">
+                <div class="hero-visual">
+                    <img src="aswin-hero-new.jpg" alt="Aswin" class="hero-profile-image">
                 </div>
-                <div class="hero-overlay"></div>
             </div>
         </section>
 
@@ -128,6 +127,10 @@
 
     <!-- Footer -->
     <footer class="site-footer">
+        <div class="footer-bg-wrapper">
+            <img src="blog/images/hero-bg.webp" alt="" class="footer-bg-image">
+            <div class="footer-overlay"></div>
+        </div>
         <div class="footer-content">
             <p>© 2026 Aswin on Finance. All rights reserved.</p>
         </div>
