--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
                     </div>
                 </div>
                 <div class="hero-visual">
-                    <img src="aswin-hero-new.jpg" alt="Aswin" class="hero-profile-image">
+                    <img src="assets/images/aswin-profile.jpg" alt="Aswin" class="hero-profile-image">
                 </div>
             </div>
         </section>
@@ -136,7 +137,7 @@
         </div>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
