--- a/calculators/cagr/index.html
+++ b/calculators/cagr/index.html
@@ -81,7 +81,7 @@
             <p class="disclaimer">CAGR represents the mean annual growth rate assuming profits are reinvested.</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
