--- a/calculators/car-loan-emi/index.html
+++ b/calculators/car-loan-emi/index.html
@@ -92,7 +92,7 @@
             <p class="disclaimer">EMI calculated using standard reducing balance method. Actual EMI may vary.</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
