--- a/calculators/sip/index.html
+++ b/calculators/sip/index.html
@@ -85,7 +85,7 @@
                 market conditions.</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
