--- a/calculators/stepup-sip/index.html
+++ b/calculators/stepup-sip/index.html
@@ -93,7 +93,7 @@
                 market conditions.</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
