--- a/index.html
+++ b/index.html
@@ -127,6 +127,23 @@
                 </div>
             </div>
         </section>
+
+        <!-- Articles Section -->
+        <section class="articles-section">
+            <div class="section-container">
+                <h2 class="section-title">Articles</h2>
+                <p class="section-subtitle">Latest insights on money and finance</p>
+
+                <div class="articles-grid" id="articlesGrid">
+                    <!-- Posts loaded dynamically -->
+                    <div class="loading-placeholder">Loading articles...</div>
+                </div>
+
+                <div class="articles-more">
+                    <a href="blog/index.html" class="read-more-link">View all articles →</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -141,6 +158,59 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script type="module">
+        import { supabase } from './js/supabase-client.js';
+
+        async function loadRecentArticles() {
+            const grid = document.getElementById('articlesGrid');
+
+            try {
+                const { data: posts, error } = await supabase
+                    .from('posts')
+                    .select('id, title, slug, excerpt, category, published_at, thumbnail_url')
+                    .order('published_at', { ascending: false })
+                    .limit(2);
+
+                if (error) throw error;
+
+                if (!posts || posts.length === 0) {
+                    grid.innerHTML = '<p class="no-articles">No articles yet. Check back soon!</p>';
+                    return;
+                }
+
+                grid.innerHTML = posts.map(post => {
+                    const date = new Date(post.published_at).toLocaleDateString('en-US', {
+                        year: 'numeric',
+                        month: 'short',
+                        day: 'numeric'
+                    });
+                    const postUrl = post.slug ? `blog/post.html?slug=${post.slug}` : `blog/post.html?id=${post.id}`;
+
+                    return `
+                        <a href="${postUrl}" class="article-card">
+                            <div class="article-thumbnail">
+                                <img src="${post.thumbnail_url || 'blog/images/placeholder.webp'}" 
+                                     alt="${post.title}"
+                                     loading="lazy"
+                                     onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect fill=%22%23f0f0f0%22 width=%22100%22 height=%22100%22/><text x=%2250%22 y=%2250%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-size=%2230%22>📄</text></svg>'">
+                            </div>
+                            <div class="article-content">
+                                <span class="article-category">${post.category || 'General'}</span>
+                                <h3 class="article-title">${post.title}</h3>
+                                <span class="article-date">${date}</span>
+                            </div>
+                        </a>
+                    `;
+                }).join('');
+
+            } catch (err) {
+                console.error('Error loading articles:', err);
+                grid.innerHTML = '<p class="error">Failed to load articles.</p>';
+            }
+        }
+
+        loadRecentArticles();
+    </script>
 </body>
 
 </html>
